--- a/kira_news/android/app/src/main/AndroidManifest.xml
+++ b/kira_news/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="kira_news"
+        android:label="Newsify"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
